--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "react-toastify": "^9.0.3",
+    "readme-md-generator": "^1.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
