--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@faker-js/faker": "^7.1.0",
     "formik": "^2.2.9",
+    "mongoose": "^6.3.8",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
